--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">News App Test</string>
     <string name="tv_register">Register</string>
     <string name="tv_password">Password</string>
     <string name="tv_email">Email</string>
