--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -6,4 +6,5 @@
     <string name="tv_username">Username</string>
     <string name="tv_registration">Registration</string>
     <string name="tv_login">Login</string>
+    <string name="tv_search_news">Search news..</string>
 </resources>
