--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -7,4 +7,7 @@
     <string name="tv_registration">Registration</string>
     <string name="tv_login">Login</string>
     <string name="tv_search_news">Search news..</string>
+    <string name="tv_hot_updates">Hot Updates</string>
+    <string name="tv_latest_news">Latest News</string>
+    <string name="tv_see_all">See All</string>
 </resources>
